# adept_experimental

./: README.md
adept_cobra_s600_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
adept_cobra_s600_moveit_config/config/: adept_cobra_s600.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml
adept_cobra_s600_moveit_config/launch/: adept_cobra_s600_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution_downloader.launch  moveit_planning_execution_streamer.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
adept_cobra_s600_support/: CMakeLists.txt  package.xml
adept_cobra_s600_support/config/: joint_names_adept_cobra_s600.yaml
adept_cobra_s600_support/launch/: load_cobra_s600.launch  robot_state_visualize_adept_cobra_s600.launch~  robot_state_visualize_cobra_s600.launch
adept_cobra_s600_support/meshes/cobra_s600/collision/: base_link.stl  flyover_cable.stl  inner_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  outer_link.stl  quill.stl
adept_cobra_s600_support/meshes/cobra_s600/visual/: base_link.stl  flyover_cable.stl  inner_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  outer_link.stl  quill.stl
adept_cobra_s600_support/tests/: roslaunch_test.xml  roslaunch_test.xml~
adept_cobra_s600_support/urdf/: cobra_s600.urdf  cobra_s600.xacro  cobra_s600_macro.xacro
adept_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
adept_driver/V+/: adept_ros.v2  adept_ros_scara.v2
adept_driver/launch/: fake_robot_io.launch  robot_interface.launch~  robot_interface_downloader.launch  robot_interface_downloader.launch~  robot_interface_streamer.launch  robot_io.launch
adept_driver/src/: adept_fake_io_service_node.cpp  adept_io_service_node.cpp  adept_io_state_publisher.cpp  adept_joint_downloader_node.cpp  adept_joint_streamer_node.cpp  adept_robot_state_node.cpp
adept_gripper_programs/: CMakeLists.txt  package.xml
adept_gripper_programs/launch/: gripper_joint_state_publisher.launch  position_gripper_action_server.launch  simple_gripper_action_server.launch
adept_gripper_programs/param/: gripper_action_param.yaml  gripper_param.yaml
adept_gripper_programs/src/: gripper_joint_state_publisher.cpp  position_gripper_action_server.cpp  simple_gripper_action_server.cpp  test_gripper_action_client_grasp.cpp  test_gripper_action_client_release.cpp  test_position_gripper_action_client_grasp.cpp  test_position_gripper_action_client_release.cpp
adept_msgs/: CMakeLists.txt  package.xml
adept_msgs/action/: PositionGripperCommand.action  SimpleGripperCommand.action
adept_msgs/msg/: IO.msg  IOStates.msg
adept_msgs/srv/: AdeptIO.srv
adept_viper_s650_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
adept_viper_s650_moveit_config/config/: adept_viper_s650.srdf  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml
adept_viper_s650_moveit_config/launch/: adept_viper_s650_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution_downloader.launch  moveit_planning_execution_streamer.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
adept_viper_s650_moveit_plugins/: CMakeLists.txt  adept_viper_s650_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
adept_viper_s650_moveit_plugins/src/: adept_viper_s650_manipulator_ikfast_moveit_plugin.cpp  adept_viper_s650_manipulator_ikfast_solver.cpp
adept_viper_s650_support/: CMakeLists.txt  package.xml  package.xml~
adept_viper_s650_support/launch/: load_viper_s650.launch  load_viper_s650.launch~  robot_interface_download_adept_cobra_s600launch~  robot_interface_download_cobra_s600.launch~  robot_interface_download_viper_s650.launch  robot_interface_download_viper_s650.launch~  robot_state_visualize_cobra_s600.launch~  robot_state_visualize_viper_s650.launch  test_cobra_s600.launch~  test_viper_s650.launch
adept_viper_s650_support/meshes/viper_s650/collision/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
adept_viper_s650_support/meshes/viper_s650/visual/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
adept_viper_s650_support/tests/: roslaunch_test.xml
adept_viper_s650_support/urdf/: viper_s650.urdf  viper_s650.xacro  viper_s650_macro.xacro
adept_viper_s650_with_test_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
adept_viper_s650_with_test_gripper_moveit_config/config/: adept_viper_s650.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
adept_viper_s650_with_test_gripper_moveit_config/launch/: default_warehouse_db.launch  (+19 more)
joint_state_aggregator/: CMakeLists.txt  package.xml
joint_state_aggregator/launch/: joint_state_aggregator.launch
joint_state_aggregator/src/: joint_state_aggregator.cpp
test_gripper_description/: CMakeLists.txt  package.xml
test_gripper_description/launch/: test_gripper.launch  test_viper_s650_with_gripper.launch
test_gripper_description/meshes/adapter/visual/: Adapter_Viper_S650_to_Gripper.stl
test_gripper_description/meshes/gripper_base/visual/: gripper_base.stl
test_gripper_description/meshes/gripper_jaw/collision/: gripper_jaw_1.stl
test_gripper_description/meshes/gripper_jaw/visual/: gripper_jaw_2.stl
test_gripper_description/rviz/: urdf.rviz
test_gripper_description/urdf/: gripper_test.urdf.xacro  gripper_test_macro.urdf.xacro  viper_s650_with_gripper.urdf.xacro
(+6 files in other folders)
