<?xml version="1.0"?>
<package format="2">
  <name>adept_viper_s650_support</name>
  <version>1.0.0</version>
  <description>The adept_viper_s650_support package</description>

  <author email="benjamin.schellenbeck@online.de">Benjamin Schellenbeck</author>
  <maintainer email="rosindustrial@todo.todo">rosindustrial</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
