<?xml version="1.0"?>
<package format="2">
  <name>test_gripper_description</name>
  <version>1.0.0</version>
  <description>The test_gripper_description package</description>

  <maintainer email="benjamin.schellenbeck@online.de">Benjamin Schellenbeck</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
